# Voxel3d

./: CMakeLists.txt  main.cpp  makefile  readme.md  voxel3d
include/voxel3d/: Camera.hpp  Chunk.hpp  ChunkLoader.hpp  ChunkRenderer.hpp  FastNoiseGenerator.hpp  FileGetter.hpp  InputGetter.hpp  Shader.hpp  Window.hpp  World.hpp  WorldUtil.hpp
notes/: RenderingPipeline.xcf
shaders/: fragment.glsl  fragment_shader.glsl  vertex.glsl  vertex_shader.glsl
src/: Camera.cpp  InputGetter.cpp  Shader.cpp  Window.cpp  World.cpp  WorldUtil.cpp  loadShader.cpp  main.cpp  texture.cpp  texture.hpp
src/Renderer/: ChunkRenderer.cpp
src/World/: Chunk.cpp  ChunkLoader.cpp  World.cpp
